fix: used qoutes instead of regex matcher & spacing for ol

--- a/src/DictionaryCard/DictionaryCard.scss
+++ b/src/DictionaryCard/DictionaryCard.scss
@@ -22,6 +22,10 @@ $margin-generic: 10px;
   }
 }
 
+ol {
+  padding-left: 15px;
+}
+
 li {
   font-size: medium;
   font-weight: bold;
